--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
         <header>
-            <a id="logo-upper-left" href="index.html">LOGOOFSOMESORT</a>
+            <a id="logo-upper-left" href="index.html">Soundslave</a>
             <nav>
                 <ul id="nav-list">
                     <li class="list-item">Home</li>
